Actualizado el pie de página en feature/footer

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Isabel Roldán Córdoba</p>
-    </footer>
+        <p>&copy; 2024 Isabel Roldán Córdoba | Todos los derechos reservados.</p>
+    </footer>    
 </body>
 </html>
