Añadida interactividad con JavaScript en feature/js-interactivity

--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
     <main>
         <h1>Bienvenido a mi Portafolio</h1>
         <p>Este es un proyecto de práctica para simular trabajo en equipo usando Git.</p>
+        <!-- Botón que dispara la función showWelcomeMessage -->
+        <button onclick="showWelcomeMessage()">Haz clic para una bienvenida</button>
     </main>
 
     <footer>
-        <p>Creado con amor por Isabel Roldán Córdoba - 2024</p>
-    </footer>    
+        <p>&copy; 2024 Isabel Roldán Córdoba</p>
+    </footer>
+
+    <!-- Incluir el script -->
+    <script src="assets/js/scripts.js"></script>
 </body>
 </html>
